2010-06-22  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl (FileScanWantedGeneral): Replace $MATCH
	with $1.

	* bin/cygbuild.sh: (CygbuildCommandMain): Make 's' optional in
	'mkdir' command.

2010-06-20  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildGPGsignFiles): don't return error on memory lock warning.
	(CygbuildCmdMkpatchMain): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildCmdDownloadCygwinPackage): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildInstallPackageDocs): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildInstallFixDocdirInstall): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildInstallFixEtcdirInstall): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildInstallFixEtcdirInstall): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CYGBUILD_LICENSE): Change to one word: GPL-2+
	(CygbuildCmdPkgDevelStandardBin): Add --group=nobody to tar create.
	(CygbuildCmdMkpatchMain): Add --group=nobody to tar create.
	(CygbuildInstallFixDocdirInstall): Add --group=nobody to tar create.
	(CygbuildInstallFixEtcdirInstall): Add --group=nobody to tar create.

2010-06-17  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildRunPythonSetupCmd): Check python
	binary before use.

2010-03-13 Sat  Jari Aalto  <jari.aalto@cante.net>

	* Makefile (doc/manual/index.txt): New.
	(doc/manual/index.html): New.
	(doc): New.

	* bin/lib/cygbuild.pl: (HELP::Other Commands): Fix typo in 'cysrc'
	command option syntax.
	(HELP::DESCRIPTION): Move after SYNOPSIS as per POSIX manual page
	standard.
	(HELP::Now the real thing; making a Cygwin package): Fix example.
	(HELP::Contributing packages): Add wget link conributing example.
	(HELP::OPTIONAL EXTERNAL DIRECTORIES): Chnage I<> to C<>.
2010-01-28  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (PATH): Define at top level to