@@ -1,4 +1,4 @@
 # List install(1) components: FROM TO [MODE, default=755]
-# Without trailing slash: rename file TO. Examples:
-#    binary usr/bin/
-#    README usr/share/doc/$PKG/ 644
+# Without trailing slash: rename file TO. $PKG is documentation dir. Examples:
+#    binary usr/bin/bin-new
+#    README $PKG/doc/ 644
